[package]
name = "cao"
version = "0.1.0"
authors = ["Johann Lee <me@qinka.pro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# curl = "*"
ureq = { version = "2.0", features = ["json"] }
structopt = ""
serde_json = "1.0"
if-addrs = "0.6"

[dev-dependencies]
trust-dns-resolver = "0.20"

[profile.release]
opt-level= 'z'
lto = true
codegen-units = 1
panic = 'abort'
