[package]
name = "cao"
version = "0.1.1"
authors = ["Johann Lee <me@qinka.pro>"]
edition = "2018"
license = "AGPL-3.0"
description = "Update DNS record."
repository = "https://github.com/qinka/cao"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default     = ["dnspod", "ureq"]
dnspod = []

[dependencies]
curl = { version = "0.4", optional = true}
ureq = { version = "2.0", features = ["json"], optional = true }
structopt = "0.3"
serde_json = "1.0"
if-addrs = "0.6"

[dev-dependencies]
trust-dns-resolver = "0.20"

[profile.release]
opt-level= 'z'
lto = true
codegen-units = 1
panic = 'abort'
